--- a/misc/AppImageBuilder.yml
+++ b/misc/AppImageBuilder.yml
@@ -49,6 +49,7 @@ AppImage:
   arch: x86_64
 script: |
     # Compile and install binaries into AppDir
+    mkdir -p AppDir/usr/bin
     cmake -B appimage-build -DENABLE_REDIS=FALSE -DENABLE_POSTGRESQL=OFF -DCMAKE_INSTALL_PREFIX=AppDir/usr/ -DBUILD_SERVER=FALSE -DENABLE_GETTEXT=TRUE -DCMAKE_BUILD_TYPE=Release -DRUN_IN_PLACE=FALSE
     cmake --build appimage-build --parallel $(nproc) --config Release
     cmake --install appimage-build
