--- a/misc/AppImageBuilder.yml
+++ b/misc/AppImageBuilder.yml
@@ -7,7 +7,7 @@ AppDir:
     name: Luanti
     icon: luanti
     version: 5.12.0
-    exec: usr/bin/luanti
+    exec: usr/bin/cloakv4
     exec_args: $@
   files:
     include: []
@@ -51,11 +51,8 @@ script: |
     # Compile and install binaries into AppDir
     cmake -B appimage-build -DENABLE_REDIS=FALSE -DENABLE_POSTGRESQL=OFF -DCMAKE_INSTALL_PREFIX=AppDir/usr/ -DBUILD_SERVER=FALSE -DENABLE_GETTEXT=TRUE -DCMAKE_BUILD_TYPE=Release -DRUN_IN_PLACE=FALSE
     cmake --build appimage-build --parallel $(nproc) --config Release
-    mkdir -p AppDir/usr/bin
-    cp appimage-build/src/cloakv4 AppDir/usr/bin/luanti
     cmake --install appimage-build
 
     # Is a backup icon location in case
     mkdir -p AppDir/usr/share/luanti/misc
     cp AppDir/usr/share/icons/hicolor/128x128/apps/luanti.png AppDir/usr/share/luanti/misc/luanti-xorg-icon-128.png
-
