--- a/misc/AppImageBuilder.yml
+++ b/misc/AppImageBuilder.yml
@@ -47,6 +47,7 @@ AppImage:
   update-information: guess
   sign-key: None
   arch: x86_64
+  compression: zlib
 script: |
     # Compile and install binaries into AppDir
     cmake -B appimage-build -DENABLE_REDIS=FALSE -DENABLE_POSTGRESQL=OFF -DCMAKE_INSTALL_PREFIX=AppDir/usr/ -DBUILD_SERVER=FALSE -DENABLE_GETTEXT=TRUE -DCMAKE_BUILD_TYPE=Release -DRUN_IN_PLACE=FALSE
