--- a/misc/AppImageBuilder.yml
+++ b/misc/AppImageBuilder.yml
@@ -4,7 +4,7 @@ AppDir:
   path: AppDir
   app_info:
     id: org.luanti.luanti
-    name: Luanti
+    name: Nameless
     icon: luanti
     version: 5.12.0
     exec: usr/bin/cloakv4
@@ -18,21 +18,20 @@ AppDir:
   apt:
     arch: amd64
     sources:
-      - sourceline: deb http://archive.ubuntu.com/ubuntu/ focal main universe
-        key_url: 'http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x3b4fe6acc0b21f32'
-      - sourceline: deb http://archive.ubuntu.com/ubuntu/ focal-updates main universe
-      - sourceline: deb http://archive.ubuntu.com/ubuntu/ focal-backports main universe
-      - sourceline: deb http://archive.ubuntu.com/ubuntu/ focal-security main universe
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy main universe
+        key_url: 'http://keyserver.ubuntu.com/pks/lookup?op=get&search=0x871920D1991BC93C'
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy-updates main universe
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy-backports main universe
+      - sourceline: deb http://archive.ubuntu.com/ubuntu/ jammy-security main universe
 
     include:
       - libc6
       - libcrypt1
-      - libcurl3-gnutls
       - libcurl4
       - libfreetype6
       - libgl1
       - libjpeg-turbo8
-      - libjsoncpp1
+      - libjsoncpp25
       - libleveldb1d
       - libluajit-5.1-2
       - libopenal1
